app/styles/app.scss
$gutter: 1rem;

body {
  margin: 0;
}

ul {
  padding-left: 0;
  list-style: none;
}

figure {
  list-style: none;
}

.app {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;

}

.app-nav {
  width: 100%;
  background: #e2f7fa;
}

.container {
  max-width: 65rem;
  width: 100%;
  margin: 0 auto;
  display: flex;
}

.app-main {
  background: #000;
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  overflow: auto;

}

.brewery-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.brewery-list__item {
  width: calc(100% / 3 - 2rem);
  margin: 0.5rem;
}

.brewery-card {
  background: #fff;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logo-frame {
  width: 30%;
  height: auto;
  margin: $gutter;
}

.logo {
  width: 100%;
  height: auto;
}

.brewery-info {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.brewery-name {
  font-size: 1.2rem;
}

.brewery-info__sub {
  font-size: 1rem;
}

